FIX: Dragzone overlapping
Changes:
- inline styles moved from ../ImportImage/Ui.js to demo.css
- minor code improvements

The change was necessary because in the old UI dragzone was overlapping
an image.

Resolves #1294

--- a/examples/demo.css
+++ b/examples/demo.css
@@ -69,12 +69,14 @@ body > .container-fluid {
   min-width:300px;
 }
 
-.hover {
-  background: #eee;
+.import-image-zone {
+  margin: 10px auto 30px auto;
+  max-width: 230px;
+  min-width: 230px;
 }
 
-.dropzone input {
-  max-width: 100%;
+.hover {
+  background: #eee;
 }
 
 .step {
@@ -252,7 +254,7 @@ a.name-header{
 }
 
 .step-column{
-  display:flex; 
+  display:flex;
   align-content: center;
   justify-content: center;
 }
@@ -276,9 +278,9 @@ a.name-header{
   width:100%;
 }
 .save-button{
-  margin-top:20px; 
+  margin-top:20px;
   margin-bottom:0px;
-  align:center; 
+  align:center;
   width:100%;
 }
 
@@ -287,7 +289,7 @@ a.name-header{
 }
 
 .dimension-tooltip:hover{
-  text-decoration: none;  
+  text-decoration: none;
 }
 
 .dimension-tooltip:focus{
